# CRUD-axum

./: Cargo.toml  Dockerfile  compose.yaml
src/: auth.rs  jwt.rs  main.rs  model.rs  routes.rs  views.rs
