[package]
name = "crud_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
hyper = "1.5.2"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
tower-http = { version = "0.6.2", features = ["cors"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"

[workspace]
resolver = "2"
